--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             color: white;
             border-radius: 4px;
             padding: 2px 3px 3px 3px;
+            margin-left:2px;
         }
 
         body {
